<resources>

    <!-- Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="action_totes">Totes</string>
    <string name="action_users">Users</string>
    <string name="action_nav">Navigate</string>
    <string name="action_password">Password</string>
    <string name="title_quick_access">Quick Access</string>

    <!-- Activity Login -->
    <string name="app_name">Backstock Manager</string>
    <string name="button_login_submit">Submit</string>

    <!-- Activity Initialize Password -->
    <string name="title_activity_init_pass">Enter Administrator Information</string>
    <string name="entry_activity_init_pass_name">Username</string>
    <string name="entry_activity_init_pass_pass">Password</string>
    <string name="button_activity_init_pass_submit">Submit</string>

    <!-- Activity Home -->
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_totes">TotesActivity</string>
    <string name="select_color">Select Color</string>
    <string name="select_size">Select Size</string>
    <string name="button_edit_contents">View Contents</string>

    <!-- Activity Totes -->
    <string name="action_manage">Manage</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- Activity Users -->
    <string name="title_activity_users">User Management</string>
    <string name="hint_username">Username</string>
    <string name="button_add_user">Add/Modify User</string>
    <string name="button_modify_user">Modify User</string>
    <string name="button_delete_user">Delete User</string>
    <string name="button_recent_history">Recent History</string>
    <string name="title_activity_test_db">TestDb</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_users">AddUsers</string>

</resources>
