<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chris.backstockmanager.SettingActivity">
    <item
        android:id="@+id/action_nav"
        android:title="@string/action_nav"
        android:orderInCategory="100"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_Totes"
                android:title="@string/action_totes"
                />
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                />
            <item
                android:id="@+id/action_users"
                android:title="@string/action_users"
                />
        </menu>

    </item>
</menu>
