<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff555555"
    tools:context="com.example.chris.backstockmanager.Users">

    <TextView
        android:text="@string/title_activity_users" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usersTitle"
        android:textSize="35sp"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:id="@+id/editUserName"
        android:layout_below="@+id/usersTitle"
        android:layout_marginTop="52dp"
        android:textSize="30sp"
        android:hint="@string/hint_username"
        android:background="#2a000000"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_user"
        android:id="@+id/addButton"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editUserName"
        android:layout_alignEnd="@+id/editUserName"
        android:layout_alignParentLeft="true"
        android:onClick="addModifyUser"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_user"
        android:id="@+id/buttonDelete"
        android:layout_below="@+id/addButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:onClick="deleteUser"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_recent_history"
        android:id="@+id/buttonHistory"
        android:layout_below="@+id/buttonDelete"
        android:layout_alignRight="@+id/buttonDelete"
        android:layout_alignEnd="@+id/buttonDelete"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:onClick="deleteUser"
        android:layout_alignParentStart="true" />

</RelativeLayout>
