<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff555555"
    tools:context="com.example.chris.backstockmanager.InitPass">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:hint="@string/entry_activity_init_pass_name"
        android:layout_above="@+id/password"
        android:layout_marginBottom="49dp"
        android:textColorHint="#ffffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/entry_activity_init_pass_pass"
        android:layout_centerVertical="true"
        android:layout_marginBottom="49dp"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="#ffffffff" />

    <Button
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:text="@string/button_activity_init_pass_submit"
        android:id="@+id/newUserSubmitButton"
        android:background="#ff000000"
        android:textColor="#ffffffff"
        android:layout_marginTop="88dp"
        android:layout_below="@+id/password"
        android:onClick="addUser"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_init_pass"
        android:id="@+id/initUser"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:textSize="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/init_pass_security"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Security (1-5)"
        android:textColorHint="#ffffffff" />
</RelativeLayout>
